--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,15 @@
     <string name="app_name">SPAC Stars</string>
     <string name="welcome">Welcome</string>
     <string name="todo">TODO</string>
+    <string name="show_160_listing"><![CDATA[Show Listing]]></string>
+    <string name="search_160_social_160_media"><![CDATA[Search Social Media]]></string>
+    <string name="alert_160_setup"><![CDATA[Alert Setup]]></string>
+    <string name="spac_160_live_160_prices"><![CDATA[SPAC Live Prices]]></string>
+    <string name="add_remove">Add/Remove</string>
+    <string name="preferences">Preferences</string>
+    <string name="google">Google</string>
+    <string name="twitter">Twitter</string>
+    <string name="reddit">Reddit</string>
+    <string name="facebook">Facebook</string>
+    <string name="search_terms">Search terms</string>
 </resources>
