--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,11 @@
     <string name="saved_spacs">Saved SPACS</string>
     <string name="add_spacs">Add SPACs</string>
     <string name="remove">Remove</string>
+    <string name="all">All</string>
+    <string name="top_10_daily_price_change">Top 10 Daily Price Change</string>
+    <string name="bottom_10_daily_price_change">Bottom 10 Daily Price Change</string>
+    <string name="top_10_weekly_price_change">Top 10 Weekly Price Change</string>
+    <string name="bottom_10_weekly_price_change">Bottom 10 Weekly Price Change</string>
+    <string name="top_10_monthly_price_change">Top 10 Monthly Price Change</string>
+    <string name="bottom_10_monthly_price_change">Bottom 10 Monthly Price Change</string>
 </resources>
